# test

./: .gitignore  CLAUDE.md  DAC_Config.csv  DAC_Config.txt  DG_DC_test.ipynb  GUI_User_Manual.md  Power_Config.txt  Power_limit_config.txt  Power_on_config.txt  README.md  Wafer_Sort_Results.csv  generate_layout.py  project_structure.txt  pyproject.toml  requirements.txt  run_auto_test.py  visa.txt  visa.yaml  wafer_layout.csv
.cursor/plans/: migrate_to_uv.md
.cursor/rules/: plan-management.mdc
automation/: config_manager.py  run_auto_test.py  test_sequencer.py
config/: DAC_Config.csv  DAC_Config_Init.csv  DMM_Config.yaml  Power_Config.yaml  Power_limit_config.yaml  Power_on_config.yaml  cp_hardware_config.yaml  cp_stage_current_config.yaml  cp_test_config.yaml  visa.yaml  wafer_layout.csv  wafer_layout.json
core/: __init__.py  config_manager.py  instruments.py  linearity_test.py  power_test.py  test_context.py  test_logic.py  tp_test.py  utils.py
cp_test/: data_manager.py  gui.py  mapping_manager.py  runner.py  test_logic.py  visualization.py
doc/: CP测试挑片软件需求规格说明书 (SRS) v1.0.md  CP测试需求说明书.md  测试功能需求说明书 v2.0.md  测试需求说明书 v1.0.md  自动化测试软件需求规格说明书.md  软件需求规格说明书 (SRS) v1.0.md
gui/: main_window.py  workers.py
prompt/: prompt_20260225.md  prompt_20260225_2.md
reference/: check_visa_resources.py  config_loader.py  configure_dg4202_for_sweep.py
