[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyinstaller>=6.19.0",
    "pyserial>=3.5",
    "pyside6>=6.10.2",
    "pyvisa>=1.16.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"  # 清华源
default = true
